fix: correct button text alignment

--- a/src/styles/notFoundPage.scss
+++ b/src/styles/notFoundPage.scss
@@ -134,6 +134,7 @@
       color: $color-dark-l;
       font-size: 40px;
       line-height: 54px;
+      text-align: center;
     }
 
     .not-fund-page__button_blue {
